tdf#107350 - prevent crash in unotbl.cxx

check pointer and throw exception instead of SIGABRT
when reading data from text tables that have
varying row &/or col lengths from
 - merged cells after first row,
 - split cells in first row, etc.

add backstop safety check -> exception because
 - complexity check fails (wrong/not called)
 - OOo uno api doc calls for exception when
       text table is 'too complex'
v2:  better error message for crash point and
       its parallel (getData[Array])

Change-Id: Ifb844c3e29042dab6b6cdb2448f7728e6ccb631d
Reviewed-on: https://gerrit.libreoffice.org/37002
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Björn Michaelsen <bjoern.michaelsen@libreoffice.org>
(cherry picked from commit eea79562f1a5785a8a22cde732a091725e46bbad)
Reviewed-on: https://gerrit.libreoffice.org/37264
Reviewed-by: Michael Stahl <mstahl@redhat.com>